# KieCPPCommon

./: CMakeLists.txt  README.md  conanfile.py
include/: http.h  kie_common.h
include/kie_common/: config_tree.h  tuple_operation.hpp
src/: CMakeLists.txt  http.cpp  kie_common.cpp
